Update nginx index filename (#47)

--- a/config/nginx/revwallet.html
+++ b/config/nginx/revwallet.html
@@ -34,6 +34,6 @@
 </head>
 <body>
   <h1>Welcome to RevWallet</h1>
-  <p>Empowering your financial journey with RevWallet API</p>
+  <p>Empowering your financial journey with RevWallet API.</p>
 </body>
 </html>
