feat: run grafana behing nginx k8s

--- a/config/nginx/revwallet.html
+++ b/config/nginx/revwallet.html
@@ -35,5 +35,8 @@
 <body>
   <h1>Welcome to RevWallet</h1>
   <p>Empowering your financial journey with RevWallet API.</p>
+  <a href="/wallet/">Wallet</a>
+  <a href="/grafana/">Grafana</a>
+  <a href="/prometheus/">Prometheus</a>
 </body>
 </html>
