feat: update index.html

--- a/index.html
+++ b/index.html
@@ -1,52 +1,95 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <title>RevWallet</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RevWallet Helm Charts</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    .chart {
-      width: 400px;
-      height: 300px;
-      margin: 20px;
-      border: 1px solid #ccc;
-      box-shadow: 2px 2px 5px #ccc;
-      display: inline-block;
-      vertical-align: top;
-      padding: 10px;
-      box-sizing: border-box;
-      font-size: 14px;
-      line-height: 1.5;
-    }
-
-    .chart h3 {
-      margin-top: 0;
-      font-size: 18px;
-      font-weight: bold;
-    }
-
-    .chart p {
+    html,
+    body {
+      height: 100%;
       margin: 0;
+      font-family: 'Inter', sans-serif;
+      background-color: #f7f9fc;
+      color: #333;
+    }
+
+    body {
+      display: flex;
+      flex-direction: column;
+    }
+
+    header {
+      background-color: #004c97;
+      color: #ffffff;
+      padding: 40px 20px;
+      text-align: center;
+      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 3em;
+      font-weight: 600;
+    }
+
+    main {
+      flex: 1;
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    main p {
+      font-size: 1.1em;
+      color: #555;
+      max-width: 800px;
+      margin: 20px auto;
+      line-height: 1.6;
+    }
+
+    footer {
+      background-color: #f1f1f1;
+      padding: 20px 0;
+      text-align: center;
+      font-size: 0.9em;
+      color: #777;
+    }
+
+    a {
+      color: #004c97;
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 
 <body>
-  <h1>RevWallet</h1>
-  <div class="chart">
-    <h3>Chart 1</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer euismod diam et purus hendrerit mollis.</p>
-    <!-- add your chart code here -->
-  </div>
-  <div class="chart">
-    <h3>Chart 2</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer euismod diam et purus hendrerit mollis.</p>
-    <!-- add your chart code here -->
-  </div>
-  <div class="chart">
-    <h3>Chart 3</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer euismod diam et purus hendrerit mollis.</p>
-    <!-- add your chart code here -->
-  </div>
+  <header>
+    <h1>RevWallet</h1>
+    <p>
+      RevWallet is an API that allows users to deposit, withdraw, and check the balance of their wallets.
+    </p>
+  </header>
+  <main>
+    <p>
+      RevWallet uses GitHub Pages to host its Helm charts.
+    </p>
+    <p>
+      You can find more documentation and the chart definition in the <a
+        href="https://github.com/arthurjguerra/revwallet">GitHub
+        Repository</a>. Please explore and feel free to contribute!
+    </p>
+  </main>
+  <footer>
+    <p>&copy; 2024 RevWallet. All rights reserved. | <a href="https://github.com/yourusername/revwallet">GitHub
+        Repository</a></p>
+  </footer>
 </body>
 
 </html>
